Updated the rendering system to seperate it from the data